# healpixviewer

./: .gitignore  CMakeLists.txt  README.md
HealpixGUI/: build.xml
HealpixGUI/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
HealpixGUI/nbproject/private/: private.properties  private.xml
HealpixGUI/src/HealpixGUI/: Heal.form  Heal.java
data/map2/: header.txt
include/: healpixviewer.h
src/: healpixviewer.cpp
